# inventory_app

./: .gitignore  CARGO_PACKAGER_FIX.md  CHANGELOG.md  Cargo.toml  ICON_IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  PUBLISHING_GUIDE.md  Packager.toml  README.md  RELEASE_WORKFLOW_UPDATE.md  TESTING_GUIDE.md  UPDATE_SYSTEM.md  build.rs
.cursor/rules/: project-rule.mdc
.github/workflows/: release-packager.yml  release.yml
assets/: README.md
scripts/: prepare-release.sh
src/: alerts.rs  app_state.rs  audit.rs  auth.rs  calculator.rs  calculator_window.rs  currency.rs  errors.rs  icon.rs  icons.rs  inventory.rs  main.rs  messages.rs  note.rs  notifications.rs  persistence.rs  search.rs  theme.rs  update_checker.rs  user.rs
src/handlers/: alerts.rs  audit.rs  auth.rs  calculator.rs  inventory.rs  mod.rs  notes.rs  search.rs  settings.rs  users.rs
src/views/: about.rs  alerts.rs  audit_log.rs  calculator.rs  dialogs.rs  editor.rs  inventory.rs  item_dialog.rs  loading.rs  login.rs  main_view.rs  mod.rs  settings.rs  user_management.rs
