[package]
name = "inventory_app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
