[package]
name = "inventory_app"
version = "0.1.0"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
open = "5.0"

[profile.release]
opt-level = "s"     # Optimize for size (use 3 for max speed, but larger binary)
lto = true          # Link Time Optimization (removes dead code)
strip = true        # Strip symbols (shrinks binary significantly)
codegen-units = 1   # Slower compile, but faster/smaller binary
panic = "abort"     # Removes stack unwind logic (saves space)
