[package]
name = "inventory_app"
version = "0.2.1"
edition = "2024"

[dependencies]
iced = { version = "0.13", features = ["tokio", "svg", "markdown"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "5.0"
tokio = { version = "1.0", features = ["fs", "io-util"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
bcrypt = "0.15"
reqwest = { version = "0.11", features = ["json"] }
semver = "1.0"
open = "5.0"
rfd = "0.14"

[target.'cfg(target_os = "macos")'.dependencies]
mac-notification-sys = "0.6.9"

[target.'cfg(target_os = "windows")'.dependencies]
winrt-notification = "0.5.1"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.11.7"

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
product-name = "Inventory Manager"
identifier = "com.ojutalayomi.inventory-app"
icons = ["assets/icon.png"]
resources = ["assets/"]
before-packaging-command = "cargo build --release"
out-dir = "dist"

[package.metadata.packager.macos]
minimum-system-version = "11.0"

[package.metadata.packager.deb]
depends = ["libc6", "libgtk-3-0", "libpango-1.0-0", "libcairo2", "libgdk-pixbuf-2.0-0", "libglib2.0-0"]

[profile.release]
opt-level = "s"     # Optimize for size (use 3 for max speed, but larger binary)
lto = true          # Link Time Optimization (removes dead code)
strip = true        # Strip symbols (shrinks binary significantly)
codegen-units = 1   # Slower compile, but faster/smaller binary
panic = "abort"     # Removes stack unwind logic (saves space)
